# signature-optimal-trading-model

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Results.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
data/: README.md
runs/: README.md
scripts/: align_data.py  build_spread.py  build_synthetic_ou.py  download_data.py  make_split.py  run_backtest.py  run_golden.py  run_pipeline.py
src/sigstop/: config.py  paths.py
src/sigstop/backtest/: accounting.py  baseline.py  costs.py  engine.py  metrics.py  reporting.py  runner.py  sot.py  validation.py
src/sigstop/data/: align.py  providers.py  schema.py  split.py
src/sigstop/features/: augmentation.py  cache.py  feature_builder.py  manifest.py  scaling.py  signature_extractor.py  validation.py
src/sigstop/generators/: __init__.py  cache.py  manifest.py  ou_fit.py  ou_sim.py  spec.py  types.py  validation.py
src/sigstop/spread/: beta_search.py  construction.py  diagnostics.py  ou.py
src/sigstop/stopping/: loss.py  payoff.py  policy.py  stop_rule.py  (+2 more)
tests/: conftest.py  test_backtest_accounting.py  test_backtest_baseline.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_runner.py  test_backtest_sot.py  test_backtest_validation.py  test_batched_feature_builder.py  test_build_spread_release.py  test_config_defaults.py  test_run_pipeline.py  test_stopping_math.py  test_stopping_policy.py  test_synthetic_training_cache.py  test_torch_stopping.py  test_train_entry_exit.py  test_train_trainer.py
tmp/: cfg_w60.yaml
(+4 files in other folders)
