[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigstop-gs-ms"
version = "0.1.0"
description = "Signature-based optimal stopping pipeline for GS-MS statistical arbitrage research."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [{name = "Quantitative Finance Project contributors"}]
keywords = ["quantitative-finance", "pairs-trading", "optimal-stopping", "signatures", "pytorch"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["pytest==9.0.2"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
namespaces = true

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
